only log to stdout by default

--- a/cakeshop-api/src/main/resources/log4j.properties
+++ b/cakeshop-api/src/main/resources/log4j.properties
@@ -3,29 +3,32 @@
 # LOGGERS #
 ###########
 
-log4j.rootLogger=WARN, stdout, cakeshop
+log4j.rootLogger=WARN, stdout
 
 # geth
-log4j.category.geth=DEBUG, geth-stdout, cakeshop, geth
+log4j.category.geth=DEBUG, geth-stdout
 log4j.additivity.geth=false
 
 # access logs
-log4j.category.com.jpmorgan.ib.caonpd.cakeshop.config.LoggingInterceptor=INFO, accesslog
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.config.LoggingInterceptor=DEBUG, accesslog
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.config.LoggingInterceptor=false
 
 # cakeshop.*
-log4j.category.com.jpmorgan.ib.caonpd.cakeshop=INFO, stdout, cakeshop
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop=INFO, stdout
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop=false
 
 # these next few are quite spammy, control them seperately
-log4j.category.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=INFO, stdout, cakeshop
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=INFO, stdout
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=false
 
-log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=INFO, stdout, cakeshop
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=INFO, stdout
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.db.BlockScanner=false
 
-log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.MetricsBlockListener=INFO, stdout, cakeshop
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.db.MetricsBlockListener=INFO, stdout
 log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.db.MetricsBlockListener=false
+
+log4j.category.com.jpmorgan.ib.caonpd.cakeshop.util.ImmutableRestTemplate=WARN, stdout
+log4j.additivity.com.jpmorgan.ib.caonpd.cakeshop.service.impl.WebSocketPushServiceImpl=false
 
 #############
 # APPENDERS #
