--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -208,6 +208,12 @@
 			<groupId>com.jcabi</groupId>
 			<artifactId>jcabi-manifests</artifactId>
 			<version>1.1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.jcabi</groupId>
+					<artifactId>jcabi-log</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- CRYPTO -->
