--- a/cakeshop-api/src/main/resources/config/application-dev.properties
+++ b/cakeshop-api/src/main/resources/config/application-dev.properties
@@ -1,32 +1,2 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-geth.url=http://localhost:8102
-geth.node.port=30303
-geth.networkid=1006
-geth.datadir=/.ethereum
-geth.rpcport=8102
-geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
-geth.log=/logs
-geth.verbosity=
-geth.identity=
-geth.mining=true
-geth.auto.stop=true
-geth.auto.start=true
-geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
-geth.cors.enabled=false
-contract.poll.delay.millis=5000
-geth.db.enabled=true
 
-# spring boot actuator
-management.context-path=/manage
-endpoints.actuator.enabled=true
-
-cakeshop.mvc.async.pool.threads.core=250
-cakeshop.mvc.async.pool.threads.max=1000
-cakeshop.mvc.async.pool.queue.max=2000
-#db config
-cakeshop.database.vendor=hsqldb
-#cakeshop.jdbc.pass=
-#cakeshop.jdbc.user=
-#cakeshop.jdbc.url=
+# add dev env overrides below
