--- a/cakeshop-api/src/main/resources/config/application-local.properties
+++ b/cakeshop-api/src/main/resources/config/application-local.properties
@@ -1,6 +1,6 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
+
+# add local env overrides below
+# (local = code running on your workstation)
 
 geth.url=http://localhost:8102
 geth.node.port=30303
@@ -14,29 +14,39 @@ geth.identity=
 geth.mining=true
 geth.auto.start=true
 geth.auto.stop=true
-geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
+geth.cors.url=
 geth.cors.enabled=false
 contract.poll.delay.millis=5000
 geth.db.enabled=true
-geth.params.extra=--jpmtest
+geth.params.extra=
 
-# spring boot actuator
-management.context-path=/manage
-endpoints.actuator.enabled=true
-
+# threadpools and queues
 cakeshop.mvc.async.pool.threads.core=250
 cakeshop.mvc.async.pool.threads.max=1000
 cakeshop.mvc.async.pool.queue.max=2000
 
-#db config
-#cakeshop.database.vendor=oracle
-#cakeshop.jndi.name=jdbc/oracle_blkchain
-
+# db config
 cakeshop.database.vendor=hsqldb
+#cakeshop.jdbc.url=
+#cakeshop.jndi.name=jdbc/oracle
 cakeshop.jdbc.user=sdk
 cakeshop.jdbc.pass=sdk
 
+# hibernate
+# override the hibernate dialect which is autodetected
+#cakeshop.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+cakeshop.hibernate.jdbc.batch_size=20
+cakeshop.hibernate.hbm2ddl.auto=update
 
-#cakeshop.jdbc.pass=
-#cakeshop.jdbc.user=
-#cakeshop.jdbc.url=
+# spring config
+spring.main.banner-mode=off
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+
+# spring boot actuator
+management.context-path=/manage
+endpoints.actuator.enabled=true
