--- a/cakeshop-api/src/main/resources/config/application-prod.properties
+++ b/cakeshop-api/src/main/resources/config/application-prod.properties
@@ -1,32 +1,2 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-geth.url=http://localhost:8102
-geth.node.port=30303
-geth.networkid=1006
-geth.datadir=/.ethereum
-geth.rpcport=8102
-geth.rpcapi.list=admin,db,eth,debug,miner,net,shh,txpool,personal,web3
-geth.log=/logs
-geth.verbosity=
-geth.identity=
-geth.mining=
-geth.auto.start=true
-geth.auto.stop=false
-geth.apistore.url=https://appstore.jpmorgan.com
-geth.cors.enabled=true
-contract.poll.delay.millis=5000
-geth.db.enabled=false
 
-# spring boot actuator
-management.context-path=/manage
-endpoints.actuator.enabled=true
-
-cakeshop.mvc.async.pool.threads.core=250
-cakeshop.mvc.async.pool.threads.max=1000
-cakeshop.mvc.async.pool.queue.max=2000
-
-#db config
-cakeshop.database.vendor=oracle
-cakeshop.jndi.name=jdbc/oracle_blkchain
-
+# add prod env overrides below
