--- a/cakeshop-api/src/main/resources/config/application-test.properties
+++ b/cakeshop-api/src/main/resources/config/application-test.properties
@@ -1,7 +1,7 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-config.version=3
+
+# add test env overrides below
+# (test = unit test env)
+
 geth.url=http://localhost:8103
 geth.node.port=30404
 geth.networkid=1007
@@ -14,7 +14,7 @@ geth.identity=
 geth.mining=
 geth.auto.stop=false
 geth.auto.start=false
-geth.apistore.url=https://appstore-dev.ny.jpmorgan.com:5143
+geth.cors.url=
 geth.cors.enabled=false
 contract.poll.delay.millis=50
 geth.db.enabled=true
@@ -27,10 +27,9 @@ cakeshop.mvc.async.pool.threads.core=250
 cakeshop.mvc.async.pool.threads.max=1000
 cakeshop.mvc.async.pool.queue.max=2000
 
+# db config
 cakeshop.database.vendor=hsqldb
 cakeshop.jdbc.user=sdk
 cakeshop.jdbc.pass=sdk
+#cakeshop.jndi.name=
 cakeshop.hibernate.jdbc.batch_size=20
-
-
-
