--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ node_modules
 bower_components/
 dist/
 node/
+cakeshop-api/src/main/webapp/js/index-gen.js*
+cakeshop-api/src/main/webapp/js/*hot-update*
+cakeshop-api/src/main/webapp/js/vendor/cakeshop.js
 
 # local testing
 FooTest.java
