--- a/cakeshop-client-js/pom.xml
+++ b/cakeshop-client-js/pom.xml
@@ -1,78 +1,72 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.jpmorgan</groupId>
-        <artifactId>cakeshop-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+  <parent>
+    <groupId>com.jpmorgan</groupId>
+    <artifactId>cakeshop-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
-    <artifactId>cakeshop-client-js</artifactId>
-    <packaging>pom</packaging>
+  <artifactId>cakeshop-client-js</artifactId>
+  <packaging>pom</packaging>
 
-    <name>Cakeshop.js</name>
+  <name>Cakeshop.js</name>
 
-    <build>
-        <plugins>
-            <!--
-                disable the maven integration for now. it fails on windows
-                because it tries to download a .exe file which is blocked
-                by our internal proxy.
-            -->
-            <!--
-            <plugin>
-                <groupId>com.github.eirslett</groupId>
-                <artifactId>frontend-maven-plugin</artifactId>
-                <version>0.0.20</version>
+  <build>
+    <plugins>
 
-                <configuration>
-                    <workingDirectory>src/main/js-client</workingDirectory>
-                    <installDirectory>target</installDirectory>
-                    <nodeVersion>v4.4.2</nodeVersion>
-                    <npmVersion>2.15.1</npmVersion>
-                </configuration>
+      <plugin>
+        <groupId>com.github.eirslett</groupId>
+        <artifactId>frontend-maven-plugin</artifactId>
+        <version>1.2</version>
 
-                <executions>
+        <configuration>
+          <workingDirectory>src/main/javascript</workingDirectory>
+          <installDirectory>target</installDirectory>
+          <nodeVersion>v6.9.1</nodeVersion>
+          <npmVersion>3.10.9</npmVersion>
+        </configuration>
 
-                    <execution>
-                        <id>install node and npm</id>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                        </goals>
-                    </execution>
+        <executions>
 
-                    <execution>
-                        <id>npm install</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                    </execution>
+          <execution>
+            <id>install node and npm</id>
+            <goals>
+              <goal>install-node-and-npm</goal>
+            </goals>
+          </execution>
 
-                    <execution>
-                        <id>bower install</id>
-                        <goals>
-                            <goal>bower</goal>
-                        </goals>
-                    </execution>
+          <execution>
+            <id>npm install</id>
+            <goals>
+              <goal>npm</goal>
+            </goals>
+          </execution>
 
-                    <execution>
-                        <id>gulp build</id>
-                        <goals>
-                            <goal>gulp</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>install</arguments>
-                        </configuration>
-                    </execution>
+          <execution>
+            <id>bower install</id>
+            <goals>
+              <goal>bower</goal>
+            </goals>
+          </execution>
 
-                </executions>
+          <execution>
+            <id>gulp build</id>
+            <goals>
+              <goal>gulp</goal>
+            </goals>
+            <configuration>
+              <arguments>install</arguments>
+            </configuration>
+          </execution>
 
-            </plugin>
-            -->
+        </executions>
 
-        </plugins>
-    </build>
+      </plugin>
+
+    </plugins>
+  </build>
 
 </project>
