--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -15,7 +15,50 @@
 	<name>Cakeshop API</name>
 
 	<properties>
+    <geth.url.base>http://com.noirqs.cakeshop.s3-website-us-east-1.amazonaws.com</geth.url.base>
 	</properties>
+
+  <profiles>
+    <profile>
+      <id>windows</id>
+      <activation>
+        <os>
+          <family>windows</family>
+        </os>
+      </activation>
+      <properties>
+        <geth.file>geth-1.4.6-stable-5422cbbd-gemini-windows.zip</geth.file>
+        <geth.sha512>73645e6c55d36b3e782c0036624c1889060a8595db47e98790ad1f09f61e0b591ce829bab95a02b3e86e84a57e54d2db73a1aae629df0282b93f04a49a50e87b</geth.sha512>
+        <geth.dir>win</geth.dir>
+      </properties>
+    </profile>
+    <profile>
+      <id>mac</id>
+      <activation>
+        <os>
+          <family>mac</family>
+        </os>
+      </activation>
+      <properties>
+        <geth.file>geth-1.4.6-stable-088d30da-gemini-mac.zip</geth.file>
+        <geth.sha512>b393fb50edea45daa131c94702f249f06cbee7a3196874a816a84c760064a16a1abf0cfa4f020d5081d3fafeae3e09c086d8824daa275cf0a28c09a7599b6325</geth.sha512>
+        <geth.dir>mac</geth.dir>
+      </properties>
+    </profile>
+    <profile>
+      <id>linux</id>
+      <activation>
+        <os>
+          <name>linux</name>
+        </os>
+      </activation>
+      <properties>
+        <geth.file>geth-1.4.6-stable-088d30da-gemini-linux.zip</geth.file>
+        <geth.sha512>85d8bbe7d200f20b10662b57d616da97b70eee48b056c8c79bac4ad3e58d525e3acfb9fea30b239cc59320e04171e667ab551bc3f5bd0d8ab25ded719f63f26f</geth.sha512>
+        <geth.dir>linux</geth.dir>
+      </properties>
+    </profile>
+  </profiles>
 
 	<dependencies>
 
@@ -427,6 +470,26 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>com.googlecode.maven-download-plugin</groupId>
+        <artifactId>download-maven-plugin</artifactId>
+        <version>1.3.0</version>
+        <executions>
+          <execution>
+            <id>install-geth</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>wget</goal>
+            </goals>
+            <configuration>
+              <url>${geth.url.base}/${geth.file}</url>
+              <unpack>true</unpack>
+              <outputDirectory>${project.build.directory}/classes/geth/bin/${geth.dir}/</outputDirectory>
+              <sha512>${geth.sha512}</sha512>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 
 		</plugins>
 
@@ -461,6 +524,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
+
 	</build>
 
 </project>
