--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -355,6 +355,19 @@
 
 </dependencies>
 
+<dependencyManagement>
+  <dependencies>
+    <dependency>
+      <!-- Import dependency management from Spring Boot -->
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-dependencies</artifactId>
+      <version>1.3.3.RELEASE</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+  </dependencies>
+</dependencyManagement>
+
 <build>
   <plugins>
 
@@ -480,7 +493,6 @@
       </executions>
     </plugin>
 
-
     <plugin>
       <artifactId>maven-clean-plugin</artifactId>
       <configuration>
@@ -504,7 +516,6 @@
         </filesets>
       </configuration>
     </plugin>
-
 
     <plugin>
       <groupId>com.googlecode.maven-download-plugin</groupId>
@@ -595,7 +606,40 @@
                   </goals>
                 </pluginExecutionFilter>
                 <action>
-                  <ignore></ignore>
+                  <ignore/>
+                </action>
+              </pluginExecution>
+              <pluginExecution>
+                <pluginExecutionFilter>
+                  <groupId>com.googlecode.maven-download-plugin</groupId>
+                  <artifactId>download-maven-plugin</artifactId>
+                  <versionRange>[1.3,)</versionRange>
+                  <goals>
+                    <goal>wget</goal>
+                  </goals>
+                </pluginExecutionFilter>
+                <action>
+                  <execute>
+                    <runOnIncremental>false</runOnIncremental>
+                  </execute>
+                </action>
+              </pluginExecution>
+              <pluginExecution>
+                <pluginExecutionFilter>
+                  <groupId>com.github.eirslett</groupId>
+                  <artifactId>frontend-maven-plugin</artifactId>
+                  <versionRange>[1.2,)</versionRange>
+                  <goals>
+                    <!-- use 'webpack watch' for incremental building -->
+                    <goal>install-node-and-npm</goal>
+                    <goal>npm</goal>
+                    <goal>webpack</goal>
+                  </goals>
+                </pluginExecutionFilter>
+                <action>
+                  <execute>
+                    <runOnIncremental>false</runOnIncremental>
+                  </execute>
                 </action>
               </pluginExecution>
             </pluginExecutions>
