use spring-boot-starter-jetty again

--- a/cakeshop-api/pom.xml
+++ b/cakeshop-api/pom.xml
@@ -104,27 +104,9 @@
       <artifactId>spring-context-support</artifactId>
     </dependency>
 
-    <!-- Replace starter-jetty with explicit deps since 1.3.3 is not in FRS -->
-    <!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-jetty</artifactId>
-    <scope>provided</scope> </dependency> -->
     <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-servlets</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-webapp</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty.websocket</groupId>
-      <artifactId>websocket-server</artifactId>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty.websocket</groupId>
-      <artifactId>javax-websocket-server-impl</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jetty</artifactId>
       <scope>provided</scope>
     </dependency>
 
