--- a/cakeshop-api/src/test/resources/log4j.properties
+++ b/cakeshop-api/src/test/resources/log4j.properties
@@ -6,12 +6,26 @@
 log4j.rootLogger=INFO, stdout
 
 # geth
-log4j.category.geth=INFO, geth-stdout
+log4j.category.geth=DEBUG, geth-stdout
 log4j.additivity.geth=false
 
 # cakeshop
 log4j.category.com.jpmorgan.cakeshop=INFO, stdout
 log4j.additivity.com.jpmorgan.cakeshop=false
+
+# these next few are quite spammy, control them seperately
+log4j.category.com.jpmorgan.cakeshop.service.impl.WebSocketPushServiceImpl=INFO, stdout
+log4j.additivity.com.jpmorgan.cakeshop.service.impl.WebSocketPushServiceImpl=false
+
+log4j.category.com.jpmorgan.cakeshop.db.BlockScanner=INFO, stdout
+log4j.additivity.com.jpmorgan.cakeshop.db.BlockScanner=false
+
+log4j.category.com.jpmorgan.cakeshop.db.MetricsBlockListener=INFO, stdout
+log4j.additivity.com.jpmorgan.cakeshop.db.MetricsBlockListener=false
+
+log4j.category.com.jpmorgan.cakeshop.util.ImmutableRestTemplate=WARN, stdout
+log4j.additivity.com.jpmorgan.cakeshop.service.impl.WebSocketPushServiceImpl=false
+
 
 #############
 # APPENDERS #
