--- a/cakeshop-client-js/src/main/javascript/package.json
+++ b/cakeshop-client-js/src/main/javascript/package.json
@@ -17,5 +17,5 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Chetan Sarva <chetan.sarva@jpmchase.com>"
+  "author": "Chetan Sarva"
 }
